manifests/mongo-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: mongo
    tier: database
spec:
  clusterIP: None
  selector:
    app: mongo
    tier: database
  ports:
  - name: db
    port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: yolo-mongo
  labels:
    app: mongo
    tier: database

spec:
  selector:
    matchLabels:
      app: mongo
      tier: database
  serviceName: mongo-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
        tier: database
    spec:
      containers:
      - name: mongo
        image: mongo:3.0
        ports:
        - name: db
          containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
      storageClassName: standard
